--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,9 @@ jobs:
         echo '</plist>' >> SoundscapeSync.app/Contents/Info.plist
         chmod +x SoundscapeSync.app/Contents/MacOS/SoundscapeSync
     - name: Install certificate
+      env:
+        MAC_CERT_P12: ${{ secrets.MAC_CERT_P12 }}
+        MAC_CERT_P12_PASSWORD: ${{ secrets.MAC_CERT_P12_PASSWORD }}
       run: |
         echo "Length of MAC_CERT_P12 is ${#MAC_CERT_P12}"
         echo "MAC_CERT_P12_PASSWORD is set: ${MAC_CERT_P12_PASSWORD:+yes}"
