--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,7 +92,6 @@ jobs:
       env:
         MAC_CERT_P12: ${{ secrets.MAC_CERT_P12 }}
         MAC_CERT_P12_PASSWORD: ${{ secrets.MAC_CERT_P12_PASSWORD }}
-        MAC_CERT_NAME: ${{ secrets.MAC_CERT_NAME }}
       run: |
         echo "Length of MAC_CERT_P12 is ${#MAC_CERT_P12}"
         echo "MAC_CERT_P12_PASSWORD is set: ${MAC_CERT_P12_PASSWORD:+yes}"
@@ -104,6 +103,8 @@ jobs:
         security default-keychain -s build.keychain
         security unlock-keychain -p "" build.keychain
     - name: Sign App
+      env:
+        MAC_CERT_NAME: ${{ secrets.MAC_CERT_NAME }}
       run: |
         codesign --deep --force --options runtime --sign "$MAC_CERT_NAME" SoundscapeSync.app
     - name: Verify signature
