--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,7 +83,6 @@ jobs:
       env:
         MAC_CERT_P12: ${{ secrets.MAC_CERT_P12 }}
         MAC_CERT_P12_PASSWORD: ${{ secrets.MAC_CERT_P12_PASSWORD }}
-        MAC_CERT_NAME: ${{ secrets.MAC_CERT_NAME }}
       run: |
         mkdir -p ~/certs
         echo "$MAC_CERT_P12" | base64 --decode > ~/certs/mac_dev_cert.p12
@@ -93,6 +92,8 @@ jobs:
         security default-keychain -s build.keychain
         security unlock-keychain -p "" build.keychain
     - name: Sign App
+      env:
+        MAC_CERT_NAME: ${{ secrets.MAC_CERT_NAME }}
       run: |
         codesign --deep --force --options runtime --sign "$MAC_CERT_NAME" SoundscapeSync.app
     - name: Verify signature
